--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8,30 +8,6 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box; }
 
-*::-webkit-input-placeholder {
-  color: #666;
-  opacity: 1; }
-
-*:-moz-placeholder {
-  color: #666;
-  opacity: 1; }
-
-*::-moz-placeholder {
-  color: #666;
-  opacity: 1; }
-
-*:-ms-input-placeholder {
-  color: #666;
-  opacity: 1; }
-
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-  color: #666; }
-
-body input:required:valid,
-body textarea:required:valid {
-  color: #666; }
-
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -158,11 +134,63 @@ label {
     background: rgba(255, 255, 255, 0.5);
     color: #F8F9FA; }
 
+.btn-border-accent {
+  border: 1px solid #ED6D43;
+    border-radius: 4px;
+  color: #ED6D43;
+  background: transparent;
+  padding: 7px 10.5px; }
+  .btn-border-accent:hover {
+    background: #ED6D43;
+    color: #fff; }
+
 .btn-primary {
   background: #ED6D43;
   color: #fff; }
   .btn-primary:hover {
     background: #E54B54; }
+
+.btn-primary.disabled, .btn-primary:disabled {
+  background: #FAC7AC;
+  border: none; }
+
+.btn-blue {
+  background: #1877F2;
+  border-radius: 4px;
+  color: #fff;
+  padding: 8px 12px; }
+  .btn-blue .svg-icon {
+    fill: #1877F2; }
+  .btn-blue:hover {
+    background: #ED6D43;
+    color: #fff; }
+    .btn-blue:hover .svg-icon {
+      fill: #ED6D43; }
+
+.btn-social__icon {
+  margin: 0 6px 0 0;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .btn-social__icon .svg-icon {
+    width: 8px;
+    height: 16px; }
+
+.btn-social {
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .btn-group .btn {
   -webkit-box-flex: 0;
@@ -260,6 +288,9 @@ h2 {
 
 .mb-32 {
   margin: 0 0 32px; }
+
+.mb-30 {
+  margin-bottom: 30px; }
 
 .container {
   position: relative;
@@ -387,8 +418,87 @@ h2 {
   .list-line strong {
     font-weight: bold; }
 
-.mb-30 {
-  margin-bottom: 30px; }
+.links-accent {
+  color: #ED6D43;
+  font-weight: 500; }
+  .links-accent:hover {
+    color: #343A40; }
+
+.form button {
+  padding: 8px 12px;
+  margin: 0;
+  font-size: 16px; }
+
+.form .btn-group .btn:not(:last-child):not(.dropdown-toggle) {
+  margin: 0; }
+
+.form .btn-group {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%; }
+
+.form label {
+  margin: 0 0 24px; }
+
+.input-title {
+  width: 100%;
+  display: block;
+  margin: 0 0 4px;
+  font-weight: 500;
+  color: #6C757D;
+  -webkit-font-feature-settings: 'pnum' on, 'lnum' on;
+          font-feature-settings: 'pnum' on, 'lnum' on; }
+
+.checkbox {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #6C757D;
+  font-family: "Inter", sans-serif;
+  cursor: pointer; }
+
+.checkbox-inp {
+  display: none; }
+
+.checkbox-custom {
+  width: 13px;
+  height: 13px;
+  min-width: 13px;
+  margin: 0 8px 0 0;
+  background: #F7F8FA;
+  border: 1px solid #EBEEF2;
+    border-radius: 2px;
+  position: relative;
+  -webkit-transition: .3s ease;
+  transition: .3s ease; }
+  .checkbox-custom:before {
+    content: '';
+    position: absolute;
+    width: 7.5px;
+    height: 6px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+    background: url("../img/checkbox.svg") no-repeat center;
+      background-size: contain;
+    opacity: 0; }
+
+.checkbox-inp:checked + .checkbox-custom {
+  background: #ED6D43;
+  border-color: #ED6D43; }
+  .checkbox-inp:checked + .checkbox-custom:before {
+    opacity: 1; }
 
 header {
   background: -webkit-gradient(linear, left top, right top, from(#ED6D43), color-stop(33.35%, #ED3751), color-stop(66.78%, #249DDF), to(#5AED78));
@@ -1122,6 +1232,201 @@ footer {
   font-weight: bold;
   -webkit-font-feature-settings: 'ordn' on;
           font-feature-settings: 'ordn' on; }
+
+.modal-content {
+  border: none;
+    border-radius: 12px;
+  -webkit-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
+  background: #fff; }
+
+.modal-dialog {
+  max-width: 700px; }
+
+.modal-content {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 100%;
+  overflow-y: auto; }
+  .modal-content h4 {
+    font-weight: bold;
+    margin: 0 0 16px; }
+
+.modal-content__left, .modal-content__right {
+  width: 50%;
+  position: relative;
+  overflow: hidden; }
+
+.modal-content__left {
+  padding: 104px 47px 163px;
+  background: #FFF9F5; }
+  .modal-content__left:after, .modal-content__left:before {
+    content: '';
+    position: absolute;
+    z-index: 1; }
+  .modal-content__left:after {
+    left: 15px;
+    bottom: -70px;
+    width: 254px;
+    height: 280px;
+    background: url("../img/decor5.png") no-repeat center;
+      background-size: contain; }
+  .modal-content__left:before {
+    top: -46px;
+    right: -65px;
+    width: 353px;
+    height: 265px;
+    background: url("../img/decor4.png") no-repeat center;
+      background-size: contain; }
+
+.modal-item {
+  position: relative;
+  padding: 116px 0 57px; }
+  .modal-item:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    width: 445px;
+    height: 406px;
+    background: url("../img/decor3.svg") no-repeat center;
+      background-size: contain;
+    opacity: .5;
+    mix-blend-mode: overlay; }
+  .modal-item > * {
+    position: relative;
+    z-index: 1; }
+
+.modal-greeting {
+  margin: 0;
+  text-align: left;
+  font-size: 32px;
+  font-weight: 600; }
+  .modal-greeting:before {
+    display: none; }
+
+.modal-icon {
+  margin: 0 0 24px; }
+
+.modal-content__right {
+  padding: 48px 45px 40px 30px; }
+
+.modal-header {
+  padding: 0;
+  margin: 0 0 24px;
+  border: none;
+    border-radius: 0; }
+
+.modal-title {
+  font-size: 24px;
+  font-weight: 600;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .modal-title:before {
+    content: '';
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 28px;
+    height: 25px;
+    background: url("../img/decor6.svg") no-repeat center;
+      background-size: contain;
+    margin: 0 10px 0 0; }
+
+.modal-footer {
+  padding: 24px 0 0;
+  margin: 24px 0 0;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border-top: 1px solid #EBEEF2; }
+  .modal-footer > * {
+    margin: 0; }
+  .modal-footer h4 {
+    margin: 0 0 8px; }
+
+.modal-body {
+  padding: 0; }
+
+.quick-entry {
+  margin: 0 0 24px; }
+
+.or {
+  width: 100%;
+  position: relative;
+  margin: 24px auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #6C757D;
+  font-size: 12.8px;
+  font-family: "Inter", sans-serif; }
+  .or:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+    height: 1px;
+    width: 100%;
+    background: #EBEEF2; }
+  .or span {
+    position: relative;
+    z-index: 1;
+    padding: 0 13px;
+    background: #fff; }
+
+.close {
+  width: 17px;
+  height: 17px;
+  padding: 0;
+  top: 15px;
+  right: 18px;
+  cursor: pointer;
+  opacity: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute; }
+  .close .svg-icon {
+    fill: #B9BEC2; }
+  .close:hover .svg-icon {
+    fill: #ED6D43; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
