--- a/app/css/main.css
+++ b/app/css/main.css
@@ -444,6 +444,9 @@ h2 {
 .form label {
   margin: 0 0 24px; }
 
+.form textarea {
+  height: 112px; }
+
 .input-title {
   width: 100%;
   display: block;
@@ -1233,17 +1236,18 @@ footer {
   -webkit-font-feature-settings: 'ordn' on;
           font-feature-settings: 'ordn' on; }
 
+.modal-dialog {
+  max-width: 700px; }
+
+.modal-dialog-scrollable .modal-content {
+  overflow-y: auto; }
+
 .modal-content {
   border: none;
     border-radius: 12px;
   -webkit-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
-  background: #fff; }
-
-.modal-dialog {
-  max-width: 700px; }
-
-.modal-content {
+  background: #fff;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1256,7 +1260,6 @@ footer {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 100%;
   overflow-y: auto; }
   .modal-content h4 {
     font-weight: bold;
@@ -1365,6 +1368,7 @@ footer {
   .modal-footer > * {
     margin: 0; }
   .modal-footer h4 {
+    width: 100%;
     margin: 0 0 8px; }
 
 .modal-body {
@@ -1427,6 +1431,24 @@ footer {
     fill: #B9BEC2; }
   .close:hover .svg-icon {
     fill: #ED6D43; }
+
+.recaptcha {
+  width: 100%;
+  -webkit-box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.08);
+  border-radius: 3px;
+  border: 1px solid #D3D3D3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  margin: 0 0 24px; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
@@ -1548,9 +1570,11 @@ footer {
     font-size: 36px; } }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width: 630px) {
+@media only screen and (max-width: 635px) {
   .search-dropdown {
-    min-width: 302px; } }
+    min-width: 302px; }
+  .modal-content__right {
+    padding: 48px 15px 40px; } }
 
 @media only screen and (max-width: 575px) {
   .nav-footer {
@@ -1651,7 +1675,18 @@ footer {
     .hero-about .hero-box p {
       max-width: 210px; }
   .hero-about .box-text {
-    margin: 0; } }
+    margin: 0; }
+  .modal-content__left {
+    display: none; }
+  .modal-content__right {
+    width: 100%; }
+  .modal-content {
+    max-width: 320px;
+    border-radius: 0; }
+  .form-callback label {
+    margin: 0 0 16px; }
+  .recaptcha {
+    margin: 0 0 16px; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
