--- a/app/sass/_modal.sass
+++ b/app/sass/_modal.sass
@@ -1,18 +1,22 @@
+.modal-dialog
+  max-width: 700px
+  //min-height: auto
+
+.modal-dialog-scrollable .modal-content
+  overflow-y: auto
+
+
+
 .modal-content
   border: none
     radius: 12px
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15)
   background: #fff
-
-.modal-dialog
-  max-width: 700px
-
-.modal-content
   flex-direction: row
   align-items: stretch
   justify-content: space-between
   flex-wrap: wrap
-  height: 100%
+  //height: 100%
   overflow-y: auto
   h4
     font-weight: bold
@@ -109,6 +113,7 @@
   >*
     margin: 0
   h4
+    width: 100%
     margin: 0 0 8px
 
 .modal-body
@@ -159,4 +164,16 @@
   &:hover
     .svg-icon
       fill: $accent
+
+
+.recaptcha
+  width: 100%
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.08)
+  border-radius: 3px
+  border: 1px solid #D3D3D3
+  display: flex
+  align-items: center
+  justify-content: center
+  overflow: hidden
+  margin: 0 0 24px
 
