add page project

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -157,6 +157,28 @@
     .box-text
       font-size: 36px
 
+  .sidebar
+    width: 100%
+    position: relative
+    margin: 0 0 20px
+
+  .scroll-wrapper
+    width: calc(100% + 40px)
+    overflow-x: auto
+
+  .list-category-project
+    display: flex
+    align-items: stretch
+    min-width: 1200px
+    white-space: nowrap
+    padding: 0 0 12px
+    li
+      margin: 0 12px 0 0
+    .active
+      order: -1
+
+  .btn-load
+    margin: 0 auto
 
 
 /* Extra Small Devices, Phones */
