--- a/app/css/main.css
+++ b/app/css/main.css
@@ -192,6 +192,13 @@ label {
       -ms-flex-pack: center;
           justify-content: center; }
 
+.btn-grey {
+  background: #4B5257;
+  color: #fff; }
+  .btn-grey:hover {
+    color: #fff;
+    background: #ED6D43; }
+
 .btn-group .btn {
   -webkit-box-flex: 0;
       -ms-flex: none;
@@ -370,6 +377,7 @@ h2 {
 
 .breadcrumbs {
   padding: 16px 0;
+  margin: 0 0 32px;
   border-bottom: 1px solid #EBEEF2; }
 
 .breadcrumb {
@@ -502,6 +510,36 @@ h2 {
   border-color: #ED6D43; }
   .checkbox-inp:checked + .checkbox-custom:before {
     opacity: 1; }
+
+.list-category-project li {
+  margin: 0 0 12px; }
+  .list-category-project li:last-child {
+    margin: 0; }
+  .list-category-project li a {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 5px 11px;
+    color: #4B5257;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    -webkit-font-feature-settings: 'pnum' on, 'lnum' on;
+            font-feature-settings: 'pnum' on, 'lnum' on;
+    border: 1px solid #EBEEF2;
+      border-radius: 300px; }
+    .list-category-project li a:hover {
+      background: #ED6D43;
+      color: #fff;
+      border-color: #ED6D43; }
+
+.list-category-project .active a {
+  background: #EBEEF2;
+  border: 1px solid #EBEEF2;
+  color: #0B0C0D; }
+
+.btn-load {
+  margin: 16px auto 0; }
 
 header {
   background: -webkit-gradient(linear, left top, right top, from(#ED6D43), color-stop(33.35%, #ED3751), color-stop(66.78%, #249DDF), to(#5AED78));
@@ -1450,6 +1488,113 @@ footer {
   overflow: hidden;
   margin: 0 0 24px; }
 
+.project h1 {
+  text-align: left;
+  margin: 0 0 32px;
+  font-size: 40px;
+  font-weight: 600; }
+
+.project-card {
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  background: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+  .project-card__img {
+    width: 100%;
+    height: 208px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    overflow: hidden; }
+    .project-card__img img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  .project-card__body {
+    padding: 16px;
+    height: calc(100% - 208px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .project-card__title {
+    color: #4B5257;
+    font-size: 20px;
+    font-weight: 600; }
+    .project-card__title:hover {
+      color: #ED6D43; }
+  .project-card__icon {
+    width: 20px;
+    height: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    fill: #B9BEC2;
+    margin: 0 8px 0 0; }
+  .project-card .box-text {
+    color: #6C757D;
+    font-size: 16px;
+    font-family: "Inter", sans-serif;
+    line-height: 24px;
+    margin: 0 0 12px;
+    font-weight: normal; }
+  .project-card .btn {
+    width: 100%;
+    margin: auto auto 0; }
+
+.project-card__info {
+  margin: 16px 0;
+  color: #6C757D;
+  font-size: 12.8px;
+  width: 100%; }
+  .project-card__info li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0 0 8px; }
+    .project-card__info li:last-child {
+      margin: 0; }
+    .project-card__info li p {
+      margin: 0 4px 0 0;
+      font-weight: 600; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -1567,7 +1712,32 @@ footer {
   .clients h3 {
     font-size: 36px; }
   .about .box-text {
-    font-size: 36px; } }
+    font-size: 36px; }
+  .sidebar {
+    width: 100%;
+    position: relative;
+    margin: 0 0 20px; }
+  .scroll-wrapper {
+    width: calc(100% + 40px);
+    overflow-x: auto; }
+  .list-category-project {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    min-width: 1200px;
+    white-space: nowrap;
+    padding: 0 0 12px; }
+    .list-category-project li {
+      margin: 0 12px 0 0; }
+    .list-category-project .active {
+      -webkit-box-ordinal-group: 0;
+          -ms-flex-order: -1;
+              order: -1; }
+  .btn-load {
+    margin: 0 auto; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px) {
