--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,3 +1,5 @@
+@import "vars"
+
 header
   background: linear-gradient(90deg, #ED6D43 0%, #ED3751 33.35%, #249DDF 66.78%, #5AED78 100%)
   color: #fff
