--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -1,3 +1,5 @@
+@import "vars"
+
 footer
   margin: 120px 0 0
   background: linear-gradient(90deg, #ED6D43 0%, #ED3751 33.35%, #249DDF 66.78%, #5AED78 100%)
