--- a/app/sass/_home.sass
+++ b/app/sass/_home.sass
@@ -197,9 +197,10 @@
 
 
 .social-share
-  position: absolute
+  position: fixed
   right: 20px
-  top: 60px
+  top: 50%
+  transform: translate(0,-50%)
   z-index: 2
   display: flex
   flex-direction: column
