--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -39,6 +39,18 @@
     p
       max-width: 160px
 
+  .report
+    .btn
+      margin: 8px 0 0
+
+  .img-absolute
+    min-width: 647px
+
+  .product-description-box-max .mb-154
+    margin-bottom: 5px
+
+
+
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px)
   footer
@@ -54,9 +66,6 @@
 
   .main-home:before
     left: 385px
-
-  .social-share
-    top: 156px
 
   .hero-box
     width: 33.3%
@@ -180,6 +189,37 @@
   .btn-load
     margin: 0 auto
 
+  .btn-sidebar-menu
+    display: flex
+
+  .sidebar-menu-row
+    background: #fff
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15)
+    padding: 12px
+
+  .list-reviews-social
+    margin: 8px 0 0
+
+  .post-box
+    display: none
+
+  .sidebar-item
+    &:last-child
+      margin: 0
+
+  .report
+    .btn
+      margin: 0 0 0 8px
+
+  .about-project
+    margin: 32px 0 54px
+
+  .img-absolute
+    display: none
+
+  .img-tablet
+    display: block
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 635px)
@@ -188,6 +228,9 @@
 
   .modal-content__right
     padding: 48px 15px 40px
+
+  .img-absolute
+    min-width: 580px
 
 @media only screen and (max-width: 575px)
   .nav-footer
@@ -235,10 +278,6 @@
 
   .hero-box
     width: 100%
-
-  .social-share
-    top: 46px
-    right: 20px
 
   .mobile-menu-box
     max-width: none
@@ -327,6 +366,45 @@
 
   .recaptcha
     margin: 0 0 16px
+
+  .img-absolute
+    display: none
+    position: relative
+    min-width: auto
+    width: 100%
+
+  .img-mob
+    display: block
+
+  .about-project
+    margin: 32px 0
+
+  .project h1
+    font-size: 36px
+
+  .title-product
+    flex-direction: column
+    align-items: center
+    margin: 0 0 31px
+    .img-logo
+      max-width: 93px
+
+  .img-brand
+    margin: 11px auto 0
+    max-width: 290px
+
+  .product-description-box__body
+    font-size: 16px
+    line-height: 24px
+
+  .product-description-box__img
+    margin: 32px 0
+
+  .product-description-box-max .mb-154
+    margin-bottom: 0
+
+  .quote
+    margin: 32px auto
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
