--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -406,6 +406,19 @@
   .quote
     margin: 32px auto
 
+  .result-test-box
+    height: auto
+    margin: 0 0 30px
+
+  .total-questionnaire
+    margin: 0 0 32px
+
+  .project-page-result
+    .product-description-box__img
+      margin: 0
+    .quote
+      margin: 0 0 32px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px)
   /**/
