--- a/app/sass/_project-page.sass
+++ b/app/sass/_project-page.sass
@@ -196,4 +196,46 @@
     fill: none
 
 
+.total-questionnaire
+  margin: 12px 0 32px
+  color: #6C757D
+  font-family: $font
+  font-size: 12.8px
+
+.result-test-box
+  height: 100%
+  border: 1px solid #EBEEF2
+    radius: 8px
+  padding: 16px
+  color: #0B0C0D
+  font-weight: 600
+  line-height: 24px
+  &__top
+    width: 100%
+    display: flex
+    align-items: flex-end
+    justify-content: space-between
+    margin: 0 0 4px
+  &__percent
+    font-size: 40px
+    font-weight: 500
+    color: $accent
+    line-height: 47px
+    letter-spacing: -2px
+
+.result-test
+  margin: 32px 0
+
+.project-page-result
+  .product-description-box__body
+    p
+      margin: 0 0 16px
+      &:last-child
+        margin: 0
+  .product-description-box h3
+    margin: 0 0 32px
+  .quote
+    margin: auto
+
+
 
